added status on the dashboard page
